--- a/.pipelines/diabetes_regression-ci.yml
+++ b/.pipelines/diabetes_regression-ci.yml
@@ -29,11 +29,12 @@ stages:
 - stage: 'Model_CI'
   displayName: 'Model CI'
   jobs:
+#************************
   - job: "Model_CI_Pipeline"
     displayName: "Model CI Pipeline"
     container: mlops
     timeoutInMinutes: 0
-    steps:
+    steps:################################ 1
     - template: code-quality-template.yml
     - task: AzureCLI@1
       inputs:
@@ -59,7 +60,7 @@ stages:
     displayName: "Get Pipeline ID for execution"
     container: mlops
     timeoutInMinutes: 0
-    steps:################################
+    steps:################################ 2
     - task: AzureCLI@1
       inputs:
         azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'
@@ -82,7 +83,7 @@ stages:
     pool: server
     variables:
       AMLPIPELINE_ID: $[ dependencies.Get_Pipeline_ID.outputs['getpipelineid.AMLPIPELINEID'] ]
-    steps:################################
+    steps:################################ 3
     - task: ms-air-aiagility.vss-services-azureml.azureml-restApi-task.MLPublishedPipelineRestAPITask@0
       displayName: 'Invoke ML pipeline'
       inputs:
@@ -97,5 +98,5 @@ stages:
     displayName: "Publish artifact if new model was registered"
     container: mlops
     timeoutInMinutes: 0
-    steps:################################
+    steps:################################ 4
     - template: diabetes_regression-publish-model-artifact-template.yml
