--- a/.pipelines/diabetes_regression-cd.yml
+++ b/.pipelines/diabetes_regression-cd.yml
@@ -17,7 +17,8 @@ resources:
     image: mcr.microsoft.com/mlops/python:latest
   pipelines:
   - pipeline: model-train-ci
-    source: Model-Train-Register-CI # Name of the triggering pipeline
+    #source: Model-Train-Register-CI # Name of the triggering pipeline
+    source: oumaramzadia.MlOps_CI_Train_Eval_reg # Name of the triggering pipeline
     trigger:
       branches:
         include:
