--- a/.pipelines/diabetes_regression-cd.yml
+++ b/.pipelines/diabetes_regression-cd.yml
@@ -150,8 +150,8 @@ stages:
       name: WebAppDeploy
       displayName: 'Azure Web App on Container Deploy'
       inputs:
-        azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'
-        # azureSubscription: '$(AZURE_RM_SVC_CONNECTION)'
+        # azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'
+        azureSubscription: '$(AZURE_RM_SVC_CONNECTION)'
         appName: '$(WEBAPP_DEPLOYMENT_NAME)'
         resourceGroupName: '$(RESOURCE_GROUP)'
         imageName: '$(IMAGE_LOCATION)'
