Update diabetes_regression-cd.yml for Azure Pipelines

--- a/.pipelines/diabetes_regression-cd.yml
+++ b/.pipelines/diabetes_regression-cd.yml
@@ -158,7 +158,8 @@ stages:
     - task: AzureCLI@1
       displayName: 'Smoke test'
       inputs:
-        azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'
+        # azureSubscription: '$(WORKSPACE_SVC_CONNECTION)'
+        azureSubscription: '$(AZURE_RM_SVC_CONNECTION)'
         scriptLocation: inlineScript
         inlineScript: |
           set -e # fail on error
